force-app/main/default/objects/QAC_Agency_Credit_Detail__mdt/QAC_Agency_Credit_Detail__mdt.object-meta.xml
<CustomObject>
    <description>QAC- This custom meta data will consist of all hard coded values which is used in Adhoc allocate credit apex classes.</description>
    <label>QAC Agency Credit Detail</label>
    <pluralLabel>QAC Agency Credit Details</pluralLabel>
</CustomObject>