force-app/main/default/objects/QAC_Agency_Credit_Detail__mdt/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Approval Status</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>