force-app/main/default/objects/QAC_Agency_Credit_Detail__mdt/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Case Type</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>