force-app/main/default/objects/QAC_Agency_Credit_Detail__mdt/fields/Fulfilled__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled__c</fullName>
    <label>Fulfilled?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>