force-app/main/default/objects/QAC_Agency_Credit_Detail__mdt/fields/Ledger_Reason__c.field-meta.xml
<CustomField>
    <fullName>Ledger_Reason__c</fullName>
    <label>Ledger Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adhoc Credits</fullName>
                <default>true</default>
                <label>Adhoc Credits</label>
            </value>
            <value>
                <fullName>Paid Service (Offline)</fullName>
            </value>
            <value>
                <fullName>Paid Service (Online)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>