force-app/main/default/objects/QAC_Agency_Credit_Detail__mdt/fields/Ledger_Transaction_frequency__c.field-meta.xml
<CustomField>
    <fullName>Ledger_Transaction_frequency__c</fullName>
    <label>Ledger Transaction frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adhoc</fullName>
                <default>true</default>
                <label>Adhoc</label>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>