force-app/main/default/objects/QAC_Agency_Credit_Detail__mdt/fields/Ledger_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Ledger_Transaction_Type__c</fullName>
    <label>Ledger Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
                <default>true</default>
                <label>Credit</label>
            </value>
            <value>
                <fullName>Debit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>