force-app/main/default/objects/QAC_Agency_Credit_Detail__mdt/fields/SubType1__c.field-meta.xml
<CustomField>
    <fullName>SubType1__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>SubType1</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>