force-app/main/default/objects/QAC_Agency_Credit_Detail__mdt/fields/UserID__c.field-meta.xml
<CustomField>
    <fullName>UserID__c</fullName>
    <label>UserID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>